--- a/css/Register.css
+++ b/css/Register.css
@@ -5,8 +5,12 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    /* Align to top */
     height: 100vh;
+  
+    
+    
 }
 
 .container {
